frontend/src/app/components/news/news-detail/news-detail.component.scss
.image-fit {
  width: 100%;
  height: 100%;
  object-fit: contain;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

/*
.big-image-box {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  color: white;
  display: flex;
  justify-content: center;
  &:hover {
    cursor:zoom-out;
  }
}
 */

.carousel-image-box {
  width: 60%;
  padding-top: 36%;
  position: relative;
  text-align: center;
  align-self: center;
  overflow: hidden;
  background-color: black;
  color: white;
  display: flex;
  justify-content: center;
  /*&:hover {
    cursor:zoom-in;
  }
   */
}

.side-panel {
  background-color: var(--secondary-color);
  min-width: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;

  &:hover {
    cursor: pointer;
  }
}

.prev-image {
  color: white;
}

.next-image {
  color: white;
}

.active {
  color: var(--analog-1);
}

.indicators {
  color: var(--secondary-color);
}

.indicator-circle {
  &:hover {
    cursor: pointer;
  }
}

.full-text-styling {
  word-wrap: break-word;
}

.delete-button {
  min-width: 125px;
  min-height: 50px;
}

.event-button {
  min-width: 125px;
  min-height: 50px;
}

